<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditProfilePage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical"
        android:background="@android:color/background_light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="#FFF"
                android:text="@string/cancel"
                android:textColor="#000"
                android:textAllCaps="false"
                android:onClick="cancel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/edit_profile"
                android:textColor="#000"
                android:gravity="center"
                android:textAllCaps="false"/>
            <Button
                android:onClick="done"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="#FFF"
                android:text="@string/done"
                android:textColor="#0069D9"
                android:textAllCaps="false"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:src="@drawable/ic_launcher_foreground"
            />
        <TextView
            android:onClick="changeProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/change_profile_picture"
            android:textColor="#0069D9"
            android:gravity="center"
            android:textSize="10dp" />

        <!--The first set of Edit texts and view texts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:weightSum="100">
            <!-- NAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/_name"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/_name"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>
            <!--USERNAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/__username"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/__username"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>
            <!--WEBSITE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/website"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/website"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>
            <!--BIO-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:id="@+id/bio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/bio"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/editBio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/bio"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:onClick="changeProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_marginLeft="20dp"
            android:text="@string/private_information"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textSize="15dp"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:weightSum="100">
            <!-- NAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/__email"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/__email"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>
            <!--USERNAME-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/__phone"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/__phone"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>
            <!--WEBSITE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:orientation="horizontal"
                android:weightSum="100">
                <TextView
                    android:id="@+id/gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:text="@string/__gender"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"/>
                <EditText
                    android:id="@+id/editGender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:hint="@string/__gender"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textColorHint="#5D6D7E"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>