<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/post_bio"
    tools:context=".post_description">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
        <LinearLayout
            android:background="#DCDCDC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100"
            android:orientation="horizontal">
            <Button
                android:background="#DCDCDC"
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="15dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:padding="20dp"
                android:textColor="#0069D9"
                android:text="@string/back"/>
            <TextView
                android:id="@+id/postButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="15dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="right|center_vertical"
                android:padding="20dp"
                android:textColor="#0069D9"
                android:text="@string/post"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            />
        <EditText
            android:id="@+id/caption"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/write_a_caption"
            android:textColorHint="#5D6D7E"
            android:textColor="#000"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="@drawable/rounded_edit_text_for_post"/>
    </LinearLayout>

</FrameLayout>