<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">
    <LinearLayout
        android:id="@+id/post_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC"
        android:weightSum="100"
        android:orientation="vertical">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="back_button"
                android:layout_weight="50"
                android:textSize="15dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:padding="20dp"
                android:textColor="#0069D9"
                android:text="@string/back"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:textSize="15dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="right|center_vertical"
                android:padding="20dp"
                android:textColor="#0069D9"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:textColor="#000"
                android:gravity="center"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/log_out"
                android:onClick="signOut"
                android:id="@+id/photo_library"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:gravity="center"
                android:textColor="#000"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/forgot_password"/>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>