<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#006693"
        android:orientation="vertical"
        android:weightSum="100">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="30dp"
            android:text="@string/register_a_new_account"/>
        <!--Email Edit texts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30dp"
                android:text="@string/email_signup"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:weightSum="100">

                <!--Empty LinearLayouts to hold the rounded edit texts-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_edit_text"
                    android:textAlignment="center"
                    android:layout_weight="60"/>

                <!--Empty LinearLayouts to hold the rounded edit texts-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!--Username editext-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30dp"
                android:text="@string/username"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:orientation="vertical"
                android:weightSum="100">

                <!--Empty LinearLayouts to hold the rounded edit texts-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_edit_text"
                    android:textAlignment="center"
                    android:layout_weight="60"/>

                <!--Empty LinearLayouts to hold the rounded edit texts-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="30dp"
                android:text="@string/passsword"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:orientation="vertical"
                android:weightSum="100">

                <!--Empty LinearLayouts to hold the rounded edit texts-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_edit_text"
                    android:textAlignment="center"
                    android:layout_weight="60"/>

                <!--Empty LinearLayouts to hold the rounded edit texts-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/rype_pass"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:weightSum="100">

                <!--Empty LinearLayouts to hold the rounded edit texts-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_edit_text"
                    android:textAlignment="center"
                    android:layout_weight="60"/>

                <!--Empty LinearLayouts to hold the rounded edit texts-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="vertical"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"></LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:textSize="30dp"
                android:textColor="#000"
                android:text="@string/register"
                android:background="@drawable/rounded_edit_text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>