<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PostLayout">
    <LinearLayout
        android:id="@+id/something"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:weightSum="100"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_weight="8">
            <TextView
                android:onClick="backButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:textColor="#000"
                android:gravity="center_horizontal"
                android:textSize="15dp"
                android:background="@drawable/go_back"

                android:padding="100dp" />
            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:textColor="#000"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/empty"
                android:textSize="25dp"
                android:layout_height="match_parent"
                android:layout_weight="60"/>
            <ImageView
                android:onClick="options"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:src="@drawable/ic_settings_button"
                android:padding="15dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100"

            android:orientation="horizontal">
            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:padding="10dp"
                android:src="@drawable/ic_launcher_foreground"/>
            <TextView
                android:id="@+id/top_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:text="@string/__username"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="59"
            android:src="@drawable/ic_launcher_foreground"
            android:id="@+id/post_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:weightSum="100"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/like_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:src="@drawable/ic_insta_heart"
                android:padding="10dp"/>
            <ImageView
                android:id="@+id/conversation_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:src="@drawable/omo"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bottom_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/__username"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:text="@string/comment"
                android:textColor="#000"
                android:textSize="15dp"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_of_likes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/zero"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/likes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:text="likes"
                android:textColor="#000"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>